--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,6 +40,7 @@ jobs:
           --skip mine_20_blocks_in_40_seconds
           --skip hash_rate_independent_of_tx_size
           --skip blocks_with_0_to_10_inputs_and_successors_are_valid
+          --skip redeem_utxos_happy_path
 
       - name: Upload coverage to coveralls.io
         uses: coverallsapp/github-action@v2
